examples/kubernetes/external-access/service-tcp.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ip-address-type: dualstack
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: nginx-hello-tcp.showcase.aws.uweeisele.dev
  name: nginx-hello-tcp
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nginx-hello
