examples/kubernetes/external-access/service-tls.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ip-address-type: dualstack
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: ${PUBLIC_HOSTED_ZONE_CERT_ARN}
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: nginx-hello-tls.ada.letuscode.dev
  name: nginx-hello-tls
spec:
  ports:
    - name: https
      port: 443
      targetPort: http
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: nginx-hello
