examples/kubernetes/external-access/custom-ingressclass-ingress-https.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
  name: nginx-hello-ingressclass-https
spec:
  ingressClassName: custom-alb
  rules:
  - host: nginx-hello-ingressclass-https.showcase.aws.uweeisele.dev
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-hello
            port:
              name: http
